# Controller/users.js
@@ -1,31 +1,34 @@
 import logger from "../Middleware/logger.js";
-import Order from "../models/order.js";
-import Food from "../models/food.js";
+import {Order, Food, User} from "../models/index.js";
 
 export default class users{
 
 
     static addOrder = async(req, res) =>{
         try {
-            const {name} = req.body
+            const {name} = req.body;
             const food = await Food.findOne({where:{name: name}});
             if(food == null || food == undefined){
                 logger.error('food doesnt exist in database');
                 return res.status(500).json({error:'this food is not servered here'});
             }
             else{
+                
+                const user = await User.findOne({where:{id: req.userData.id}})
+                logger.info(req.userData.id);
+                logger.info(user.id);
                 const newOrder = {
                     name: food.name,
                     quantity: 2,
                     unit_Price: food.price,
                     price: food.price* 2,
-                    status: false,
-                    owner: 'that guy'
+                    status: false
                 }
-                await Order.create(newOrder);
+                // await Order.create(newOrder);
+                user.createOrder(newOrder);
+                // User.createOrder
                 logger.info('new order made by user');
                 res.status(201).json("order created successfully!");
-
             }
         } 
         catch (error) {
@@ -38,7 +41,7 @@ export default class users{
         try {
             const completedOrders = await Order.findAll({where:{status: true}});
             logger.info('this your list of completed orders');
-            res.status(200).json({orderHistory: completedOrders});
+            res.status(200).json(completedOrders);
         } 
         catch (error) {
             logger.error('failed to find order history',error);
